# Fast_Api_Luizalabs

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  main.py
app/controllers/: post_controller.py
app/models/: post.py
app/views/: post_view.py
tests/: conftest.py  test_api.py  test_auth.py  test_posts.py
